test/fixtures/_snapshots/formatTest_errorTests.60fdfa9e.0.snapshot
formatTest › errorTests › ./test/fixtures/formatTest/errorTests/comments1.re
File \"./test/fixtures/formatTest/errorTests/comments1.re\", line 1, characters 0-2:
1 | /* this is an unterminated comment
    ^^
Error: Comment not terminated


